--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -63,7 +63,7 @@ input:focus {
 	box-shadow: 0 5px 5px rgba(0, 0, 0, 0.5);
 	position: fixed;
 	top: 0;
-	width: 100vw;
+	width: 100%;
 	z-index: 100;
 }
 
